--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -44,6 +44,51 @@ h1.page-header {
     width: 100%;
     border-bottom: 1px solid #e7e7e7;
 }
+
+.side-menu #dropdown_transactions {
+    border: 0;
+    margin-bottom: 0;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow: none;
+}
+.side-menu #dropdown_transactions .caret {
+    float: right;
+    margin: 9px 5px 0;
+}
+.side-menu #dropdown_transactions .indicator {
+    float: right;
+}
+.side-menu #dropdown_transactions > a {
+    border-bottom: 1px solid #e7e7e7;
+}
+.side-menu #dropdown_transactions .panel-body {
+    padding: 0;
+    background-color: #f3f3f3;
+}
+.side-menu #dropdown_transactions .panel-body .navbar-nav {
+    width: 100%;
+}
+.side-menu #dropdown_transactions .panel-body .navbar-nav li {
+    padding-left: 15px;
+    border-bottom: 1px solid #e7e7e7;
+}
+.side-menu #dropdown_transactions .panel-body .navbar-nav li:last-child {
+    border-bottom: none;
+}
+.side-menu #dropdown_transactions .panel-body .panel > a {
+    margin-left: -20px;
+    padding-left: 35px;
+}
+.side-menu #dropdown_transactions .panel-body .panel-body {
+    margin-left: -15px;
+}
+.side-menu #dropdown_transactions .panel-body .panel-body li {
+    padding-left: 30px;
+}
+.side-menu #dropdown_transactions .panel-body .panel-body li:last-child {
+    border-bottom: 1px solid #e7e7e7;
+}
 .side-menu .navbar-nav li a {
     padding: 15px;
 }
@@ -336,6 +381,9 @@ h1.page-header {
     }
     /* Dropdown tweek */
     #dropdown .panel-body .navbar-nav {
+        margin: 0;
+    }
+    #dropdown_transactions .panel-body .navbar-nav {
         margin: 0;
     }
 }
